# lido-otc-seller

./: .gitignore  .prettierignore  .prettierrc.json  .solhint.json  README.md  ape-config.yaml  brownie-config.yaml  hardhat.config.js  otc_seller_config.py  package-lock.json  package.json  pyproject.toml  token_seller_config.py
.github/workflows/: analyse.yml  slither.yml
contracts/: OTCFactory.sol  OTCRegistry.sol  OTCSeller.sol  Setup.sol  TokenSeller.sol
contracts/interfaces/: IChainlinkPriceFeedV3.sol  ICurveSmartRouter.sol  ICurveSynthSwap.sol  IGPv2Settlement.sol  IOTCRegistry.sol  IUniswapRouterV2.sol  IVault.sol  IWETH.sol
contracts/lib/: AssetRecoverer.sol  Clones.sol  GPv2Order.sol  LibTokenPair.sol
contracts/proxy/: ERC1967Implementation.sol  OssifiableProxy.sol
interfaces/: ACL.json  Agent.json  Finance.json  TokenManager.json  Vault.json  Voting.json
scripts/: deploy.py  main.py
tests/: conftest.py  test_integrations.py  test_unit.py
utils/: config.py  cow.py  dao.py  deployed_state.py  env.py  helpers.py  log.py  mainnet_fork.py
